@startuml RoarFitnessERP_ERD
' Roar Fitness ERP — Entity Relationship Diagram
' Generated from backend/RoarFitnessERP.Api (EF Core models + AppDbContext)
' Frontend2 portals: Public Website, Member, Instructor, Admin

title Roar Fitness ERP — Entity Relationship Diagram

skinparam shadowing false
skinparam linetype ortho
skinparam roundcorner 8
skinparam class {
  BackgroundColor #FEFEFE
  BorderColor #2B2B2B
  ArrowColor #444444
}
skinparam package {
  BackgroundColor #F7F7F7
  BorderColor #888888
}

hide circle

' =============================================================================
' Identity & access
' =============================================================================
package "Identity & Access" #E8F4FD {

  entity "Role" as Role {
    * **RoleId** : INT <<PK>>
    --
    RoleName : VARCHAR
    Description : VARCHAR
  }

  entity "User" as User {
    * **UserId** : INT <<PK>>
    --
    Email : VARCHAR
    PasswordHash : VARCHAR
    FirstName : VARCHAR
    LastName : VARCHAR
    Phone : VARCHAR
    IsActive : BIT
    CreatedAt : DATETIME
    UpdatedAt : DATETIME
  }

  entity "UserRole" as UserRole {
    * **UserRoleId** : INT <<PK>>
    --
    * UserId : INT <<FK>>
    * RoleId : INT <<FK>>
    AssignedAt : DATETIME
  }

  entity "Member" as Member {
    * **MemberId** : INT <<PK>>
    --
    * UserId : INT <<FK>> <<UK>>
    IdentificationNumber : VARCHAR(15) <<UK>>
    NicNumber : VARCHAR
    DateOfBirth : DATE
    Gender : VARCHAR
    AddressLine1 : VARCHAR
    City : VARCHAR
    Country : VARCHAR
    EmergencyContactName : VARCHAR
    EmergencyContactPhone : VARCHAR
    FingerprintTemplateId : VARCHAR
    IsFingerprintActivated : BIT
    FingerprintActivatedAt : DATETIME
    JoinedAt : DATETIME
    IsTerminated : BIT
    TerminatedAt : DATETIME
  }

  entity "Instructor" as Instructor {
    * **InstructorId** : INT <<PK>>
    --
    * UserId : INT <<FK>> <<UK>>
    IdentificationNumber : VARCHAR(12) <<UK>>
    NicNumber : VARCHAR
    DateOfBirth : DATE
    AddressLine1 : VARCHAR
    City : VARCHAR
    Country : VARCHAR
    Specialization : VARCHAR
    Bio : VARCHAR
    YearsExperience : INT
    Qualification1 : VARCHAR
    Qualification2 : VARCHAR
    Speciality1 : VARCHAR
    Speciality2 : VARCHAR
    Speciality3 : VARCHAR
    ProfilePhotoUrl : VARCHAR
    HireDate : DATE
    FingerprintTemplateId : VARCHAR
    IsFingerprintActivated : BIT
    IsTerminated : BIT
    TerminatedAt : DATETIME
  }
}

Role ||--o{ UserRole
User ||--o{ UserRole
User ||--o| Member : "profile"
User ||--o| Instructor : "profile"

' =============================================================================
' Membership & billing
' =============================================================================
package "Membership & Billing" #FFF8E8 {

  entity "MembershipPackageType" as PackageType {
    * **PackageTypeId** : INT <<PK>>
    --
    TypeName : VARCHAR
    Description : VARCHAR
  }

  entity "MembershipPackage" as Package {
    * **PackageId** : INT <<PK>>
    --
    * PackageTypeId : INT <<FK>>
    PackageName : VARCHAR
    Description : VARCHAR
    Amenities : VARCHAR
    DurationDays : INT
    PriceLKR : DECIMAL(12,2)
    IsFeatured : BIT
    IsActive : BIT
    CreatedAt : DATETIME
  }

  entity "Membership" as Membership {
    * **MembershipId** : INT <<PK>>
    --
    * MemberId : INT <<FK>>
    * PackageId : INT <<FK>>
    StartDate : DATE
    EndDate : DATE
    IsActive : BIT
    CreatedAt : DATETIME
  }

  entity "PaymentMethod" as PaymentMethod {
    * **PaymentMethodId** : INT <<PK>>
    --
    MethodName : VARCHAR
  }

  entity "PaymentStatus" as PaymentStatus {
    * **PaymentStatusId** : INT <<PK>>
    --
    StatusName : VARCHAR
  }

  entity "Payment" as Payment {
    * **PaymentId** : INT <<PK>>
    --
    PaymentReference : VARCHAR <<UK>>
    MemberId : INT <<FK>>
    * PaymentMethodId : INT <<FK>>
    * PaymentStatusId : INT <<FK>>
    AmountLKR : DECIMAL(12,2)
    Currency : VARCHAR
    GatewayTransactionId : VARCHAR
    PaymentPurpose : VARCHAR
    PaidAt : DATETIME
    CreatedAt : DATETIME
  }

  entity "MembershipPayment" as MembershipPayment {
    * **MembershipPaymentId** : INT <<PK>>
    --
    * PaymentId : INT <<FK>>
    * MembershipId : INT <<FK>>
    * PackageId : INT <<FK>>
  }
}

PackageType ||--o{ Package
Member ||--o{ Membership
Package ||--o{ Membership
Member ||--o{ Payment
PaymentMethod ||--o{ Payment
PaymentStatus ||--o{ Payment
Payment ||--o{ MembershipPayment
Membership ||--o{ MembershipPayment
Package ||--o{ MembershipPayment

' =============================================================================
' Classes & sessions
' =============================================================================
package "Classes & VIP Sessions" #EEF8EE {

  entity "GeneralClass" as GeneralClass {
    * **GeneralClassId** : INT <<PK>>
    --
    Title : VARCHAR
    Category : VARCHAR
    Description : VARCHAR
    * InstructorId : INT <<FK>>
    Weekday : INT
    TimeRange : VARCHAR
    Duration : VARCHAR
    Studio : VARCHAR
    IsActive : BIT
    CreatedAt : DATETIME
    UpdatedAt : DATETIME
  }

  entity "SpecialSession" as SpecialSession {
    * **SessionId** : INT <<PK>>
    --
    * InstructorId : INT <<FK>>
    Title : VARCHAR
    Description : VARCHAR
    StartDateTime : DATETIME
    EndDateTime : DATETIME
    FeePerPersonLKR : DECIMAL(12,2)
    MaxParticipants : INT
    Status : VARCHAR
    RejectionReason : VARCHAR
    ReviewedByUserId : INT <<FK>>
    ReviewedAt : DATETIME
    CreatedAt : DATETIME
  }

  entity "SpecialSessionEnrollment" as SessionEnrollment {
    * **EnrollmentId** : INT <<PK>>
    --
    * SessionId : INT <<FK>>
    * MemberId : INT <<FK>>
    * PaymentId : INT <<FK>>
    EnrolledAt : DATETIME
  }
}

Instructor ||--o{ GeneralClass
Instructor ||--o{ SpecialSession
User ||--o{ SpecialSession : "reviews"
SpecialSession ||--o{ SessionEnrollment
Member ||--o{ SessionEnrollment
Payment ||--o{ SessionEnrollment

' =============================================================================
' Workout / meal plans
' =============================================================================
package "Workout / Meal Plans" #F3E8FF {

  entity "MemberPlanRequest" as PlanRequest {
    * **RequestId** : INT <<PK>>
    --
    * MemberId : INT <<FK>>
    * InstructorId : INT <<FK>>
    PlanCategory : VARCHAR
    MemberNote : VARCHAR
    Status : VARCHAR
    PlanId : INT <<FK>>
    CreatedAt : DATETIME
    ApprovedAt : DATETIME
  }

  entity "MemberFitnessPlan" as FitnessPlan {
    * **PlanId** : INT <<PK>>
    --
    RequestId : INT <<FK>> <<UK>>
    * MemberId : INT <<FK>>
    * InstructorId : INT <<FK>>
    PlanCategory : VARCHAR
    Description : VARCHAR
    Notes : VARCHAR
    CreatedAt : DATETIME
    UpdatedAt : DATETIME
  }
}

Member ||--o{ PlanRequest
Instructor ||--o{ PlanRequest
PlanRequest ||--o| FitnessPlan : "approved plan"
Member ||--o{ FitnessPlan
Instructor ||--o{ FitnessPlan

' =============================================================================
' Attendance
' =============================================================================
package "Attendance" #FFE8E8 {

  entity "AttendanceLog" as AttendanceLog {
    * **AttendanceLogId** : BIGINT <<PK>>
    --
    MemberId : INT <<FK>>
    InstructorId : INT <<FK>>
    FingerprintTemplateId : VARCHAR
    ScannerDeviceId : VARCHAR
    AccessGranted : BIT
    ValidationMessage : VARCHAR
    LoggedAt : DATETIME
  }
}

Member ||--o{ AttendanceLog
Instructor ||--o{ AttendanceLog

note right of AttendanceLog
  Check constraint: MemberId and InstructorId
  cannot both be set on the same row.
end note

' =============================================================================
' POS, inventory & shop
' =============================================================================
package "POS, Inventory & Shop" #F0F0F0 {

  entity "ProductCategory" as ProductCategory {
    * **CategoryId** : INT <<PK>>
    --
    CategoryName : VARCHAR
    Description : VARCHAR
  }

  entity "Product" as Product {
    * **ProductId** : INT <<PK>>
    --
    * CategoryId : INT <<FK>>
    SKU : VARCHAR <<UK>>
    ProductName : VARCHAR
    Description : VARCHAR
    UnitPriceLKR : DECIMAL(12,2)
    IsAvailableOnline : BIT
    IsActive : BIT
    ImageUrl : VARCHAR
    CreatedAt : DATETIME
  }

  entity "InventoryItem" as InventoryItem {
    * **InventoryItemId** : INT <<PK>>
    --
    * ProductId : INT <<FK>> <<UK>>
    QuantityOnHand : INT
    ReorderLevel : INT
    LastRestockedAt : DATETIME
    UpdatedAt : DATETIME
  }

  entity "InventoryAdjustment" as InventoryAdjustment {
    * **AdjustmentId** : INT <<PK>>
    --
    * InventoryItemId : INT <<FK>>
    * AdjustedByUserId : INT <<FK>>
    QuantityChange : INT
    Reason : VARCHAR
    AdjustedAt : DATETIME
  }

  entity "OrderStatus" as OrderStatus {
    * **OrderStatusId** : INT <<PK>>
    --
    StatusName : VARCHAR
  }

  entity "Order" as Order {
    * **OrderId** : INT <<PK>>
    --
    OrderReference : VARCHAR <<UK>>
    MemberId : INT <<FK>>
    * OrderStatusId : INT <<FK>>
    OrderChannel : VARCHAR
    SubtotalLKR : DECIMAL(12,2)
    TotalLKR : DECIMAL(12,2)
    PaymentId : INT <<FK>>
    ProcessedByUserId : INT <<FK>>
    Notes : VARCHAR
    BillReference : VARCHAR
    CreatedAt : DATETIME
  }

  entity "OrderItem" as OrderItem {
    * **OrderItemId** : INT <<PK>>
    --
    * OrderId : INT <<FK>>
    * ProductId : INT <<FK>>
    Quantity : INT
    UnitPriceLKR : DECIMAL(12,2)
  }
}

ProductCategory ||--o{ Product
Product ||--|| InventoryItem
InventoryItem ||--o{ InventoryAdjustment
User ||--o{ InventoryAdjustment : "adjusted by"
OrderStatus ||--o{ Order
Member ||--o{ Order
Payment ||--o{ Order
User ||--o{ Order : "processed by"
Order ||--o{ OrderItem
Product ||--o{ OrderItem

' =============================================================================
' Public website content (standalone)
' =============================================================================
package "Public Website Content" #FAFAFA {

  entity "Trainer" as Trainer {
    * **TrainerId** : INT <<PK>>
    --
    FullName : VARCHAR
    Title : VARCHAR
    Bio : VARCHAR
    Specializations : VARCHAR
    PhotoUrl : VARCHAR
    DisplayOrder : INT
    IsActive : BIT
  }

  entity "ContactMessage" as ContactMessage {
    * **ContactMessageId** : INT <<PK>>
    --
    FullName : VARCHAR
    Email : VARCHAR
    Phone : VARCHAR
    Subject : VARCHAR
    Message : VARCHAR
    IsRead : BIT
    SubmittedAt : DATETIME
  }
}

note bottom of Trainer
  Marketing trainer profiles for the public site.
  Not linked to Instructor accounts in the database.
end note

note bottom of ContactMessage
  Visitor inquiries from the public contact form
  (Admin → Visitor Inquiries).
end note

' =============================================================================
' Portal mapping legend
' =============================================================================
legend right
  |= Portal |= Main entities |
  | Public Website | Package, GeneralClass, SpecialSession, Trainer, ContactMessage |
  | Member Portal | Member, Membership, Payment, SessionEnrollment, PlanRequest, FitnessPlan, Order |
  | Instructor Portal | Instructor, SpecialSession, PlanRequest, FitnessPlan, GeneralClass, AttendanceLog |
  | Admin Portal | All entities |
  |= Symbol |= Meaning |
  | <<PK>> | Primary key |
  | <<FK>> | Foreign key |
  | <<UK>> | Unique constraint |
endlegend

@enduml
